docs(stage6): add V1_STAGE6 goals and retro expected deltas